[FIX] desktop mode overflow error fix

--- a/src/components/styles/config/_variables.scss
+++ b/src/components/styles/config/_variables.scss
@@ -15,7 +15,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   position: relative;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 a {
