--- a/src/components/styles/layout.scss
+++ b/src/components/styles/layout.scss
@@ -3,7 +3,7 @@
 .layout {
   width: 100%;
   &-left-side-wrap {
-    position: absolute;
+    position: fixed;
     left: 0;
     top: 0;
     width: 30%;
@@ -29,11 +29,8 @@
   &-right-side-wrap {
     position: relative;
     float: right;
-    // right: 0;
-    // top: 0;
     width: 70%;
     height: auto;
-    // overflow-y: scroll;
     padding-top: 16px;
     box-sizing: border-box;
     transition: all 0.4s ease-out;
@@ -77,7 +74,7 @@
     width: 26px;
     height: 32px;
     border-radius: 0 16px 16px 0;
-    position: absolute;
+    position: fixed;
     line-height: 32px;
     text-align: center;
     left: 0;
